# ssehc

./: CMakeLists.txt  Makefile  README.md  analyse.py  board.py  main copy.py  main.py  theme.json
src/: bishop.cpp  board.cpp  chess.cpp  chess.hpp  constants.cpp  engine.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp  subprocess.hpp
